--- a/index.html
+++ b/index.html
@@ -12,55 +12,59 @@
 </head>
 
 <body>
-    <h1 class="text-center">Welcome to Calculate me!</h1>
-    <div class="container flex flex-col mx-auto items-center">
-        <div class="row">
-            <input type="text" class="input">
-        </div>
+    <div class="cal-outer-body">
+        <div class="cal-inner-body">
+            <h1 class="text-center">Welcome to Calculate me!</h1>
+            <div class="container flex flex-col mx-auto items-center">
+                <div class="row">
+                    <input type="text" class="input">
+                </div>
 
-        <div class="row">
-            <button class="button">C</button>
-            <button class="button">%</button>
-            <button class="button">Bksp</button>
-            <button class="button">*</button>
+                <div class="row">
+                    <button class="button">C</button>
+                    <button class="button">%</button>
+                    <button class="button">Bksp</button>
+                    <button class="button">*</button>
 
-        </div>
+                </div>
 
-        <div class="row">
-            <button class="button">7</button>
-            <button class="button">8</button>
-            <button class="button">9</button>
-            <button class="button">+</button>
+                <div class="row">
+                    <button class="button">7</button>
+                    <button class="button">8</button>
+                    <button class="button">9</button>
+                    <button class="button">+</button>
 
-        </div>
+                </div>
 
-        <div class="row">
-            <button class="button">4</button>
-            <button class="button">5</button>
-            <button class="button">6</button>
-            <button class="button">-</button>
+                <div class="row">
+                    <button class="button">4</button>
+                    <button class="button">5</button>
+                    <button class="button">6</button>
+                    <button class="button">-</button>
 
-        </div>
+                </div>
 
-        <div class="row">
-            <button class="button">1</button>
-            <button class="button">2</button>
-            <button class="button">3</button>
-            <button class="button">/</button>
+                <div class="row">
+                    <button class="button">1</button>
+                    <button class="button">2</button>
+                    <button class="button">3</button>
+                    <button class="button">/</button>
 
-        </div>
+                </div>
 
-        <div class="row">
-            <button class="button">00</button>
-            <button class="button">0</button>
-            <button class="button">.</button>
-            <button class="button">=</button>
+                <div class="row">
+                    <button class="button">00</button>
+                    <button class="button">0</button>
+                    <button class="button">.</button>
+                    <button class="button">=</button>
 
-        </div>
+                </div>
 
-        <div class="history">
-            <h2>Calculation History</h2>
-            <ul id="history-list"></ul>
+                <div class="history">
+                    <h2>Calculation History</h2>
+                    <ul id="history-list"></ul>
+                </div>
+            </div>
         </div>
     </div>
 
