Added hover effect and a seperator

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="cal-outer-body">
         <div class="cal-inner-body">
             <h1 class="text-center">Welcome to Calculate me!</h1>
+            <div class="seperator"></div>
             <div class="container flex flex-col mx-auto items-center">
                 <div class="row">
                     <input type="text" class="input">
