--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link href="utils.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
+<body >
+
+    <img src="images/moon.png" id="icon">
+
     <div class="cal-outer-body">
         <div class="cal-inner-body">
             <h1 class="text-center">Welcome to Calculate me!</h1>
@@ -68,7 +71,6 @@
             </div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 
