--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="history">
-                    <h2>Calculation History</h2>
+                    <h2 class="historyHeadline">Calculation History <a class="clearHistory" title="Click to clear Calculation History">🗑</a></h2>
                     <ul id="history-list"></ul>
                 </div>
             </div>
