Bksp changed to arrow, and fixing the overflow

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="row">
                     <button class="button arithmetic">C</button>
                     <button class="button arithmetic">%</button>
-                    <button class="button arithmetic">Bksp</button>
+                    <button class="button arithmetic">←</button>
                     <button class="button arithmetic">*</button>
 
                 </div>
