--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <link href="utils.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body >
+<body>
 
     <img src="images/moon.png" id="icon">
 
     <div class="cal-outer-body">
         <div class="cal-inner-body">
             <h1 class="text-center">Welcome to Calculate me!</h1>
-            <div class="seperator"></div>
-            <div class="container flex flex-col mx-auto items-center">
+            <div class="container flex flex-col items-center">
+                <audio src="./sound-effect/click-sound.wav" id="click-sound"></audio>
+
                 <div class="row">
                     <input type="text" class="input">
                 </div>
@@ -65,7 +66,8 @@
                 </div>
 
                 <div class="history">
-                    <h2 class="historyHeadline">Calculation History <a class="clearHistory" title="Click to clear Calculation History">🗑</a></h2>
+                    <h2 class="historyHeadline">Calculation History <a class="clearHistory"
+                            title="Click to clear Calculation History">🗑</a></h2>
                     <ul id="history-list"></ul>
                 </div>
             </div>
