Added volume button to Calculate-Me Website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
 
-    <img src="images/moon.png" id="icon">
+    <img src="images/moon.png" id="icon" alt="Night/Day Mode Toggle">
+    <img src="images/Volume_On.png" id="volumeIcon" alt="Volume Toggle Unmuted">
 
     <div class="cal-outer-body">
         <div class="cal-inner-body">
